--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,6 @@
       "enableI18nLegacyMessageIdFormat": false,
       "strictInjectionParameters": false,
       "strictInputAccessModifiers": false,
-      "strictTemplates": false
+      "strictTemplates": true
     }
   }
-  
